Add Bedrock image